--- a/UserDasboard/Main/index.html
+++ b/UserDasboard/Main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,10 +17,7 @@
   </head>
 
   <body>
-    <div
-      class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary"
-      style="width: 280px"
-    >
+    <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
       <p class="fs-4 text-center">SpendSense</p>
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
@@ -85,6 +82,10 @@
           <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
       </div>
+    </div>
+    <div class="content">
+      <h1>Welcome to SpendSense</h1>
+      <p>Your dashboard content goes here...</p>
     </div>
   </body>
 </html>
