--- a/Login/index.html
+++ b/Login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpendSense</title>
+    <title>SpendSense | Login</title>
     <link href="styles.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
       <form>
-        <h1 class="h3 mb-3 fw-normal text-center">Please login in</h1>
+        <h1 class="h3 mb-3 fw-normal text-center">Please login</h1>
 
         <div class="form-floating">
           <input
@@ -39,7 +39,7 @@
           <label for="floatingPassword">Password</label>
         </div>
         <button class="btn btn-primary w-100 py-2" type="submit">
-          Login In
+          Login
         </button>
       </form>
       <button class="btn btn-primary w-100 mt-2" type="submit">Sign Up</button>
