--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -17,11 +17,20 @@
   </head>
   <body>
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
-      <p class="fs-4 text-center title">SpendSense</p>
+      <div class="d-flex align-items-center">
+        <img
+          class="logo me-2"
+          src="/img/SpendSense.png"
+          width="50"
+          height="50"
+        />
+        <p class="fs-4 title">SpendSense</p>
+      </div>
+
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="#" class="nav-link link-body-emphasis" aria-current="page">
+          <a href="#" class="nav-link link-light" aria-current="page">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#home"></use>
             </svg>
@@ -29,7 +38,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="#" class="nav-link link-light">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#speedometer2"></use>
             </svg>
@@ -45,7 +54,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="#" class="nav-link link-light">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#table"></use>
             </svg>
@@ -57,11 +66,11 @@
       <div class="dropdown">
         <a
           href="#"
-          class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+          class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <strong class="UserName">User</strong>
+          <strong class="UserName text-white">User</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" href="#">Settings</a></li>
@@ -102,7 +111,7 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn btn-success w-100">
+                <button type="submit" class="btn text-white w-100">
                   Add Income
                 </button>
               </form>
@@ -134,7 +143,7 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn btn-danger w-100">
+                <button type="submit" class="btn text-white w-100">
                   Add Expense
                 </button>
               </form>
@@ -166,7 +175,7 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn btn-primary w-100">
+                <button type="submit" class="btn text-white w-100">
                   Add Asset
                 </button>
               </form>
@@ -198,7 +207,7 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn btn-warning w-100">
+                <button type="submit" class="btn text-white w-100">
                   Add Debt
                 </button>
               </form>
@@ -239,7 +248,7 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn btn-dark w-100">
+                <button type="submit" class="btn text-white w-100">
                   Add Payment
                 </button>
               </form>
@@ -296,7 +305,7 @@
                     </select>
                   </div>
                   <div class="col-md-2">
-                    <button type="submit" class="btn btn-success w-100">Add</button>
+                    <button type="submit" class="btn text-white w-100">Add</button>
                   </div>
                 </div>
               </form>
@@ -323,7 +332,7 @@
                     </select>
                   </div>
                   <div class="col-md-2">
-                    <button type="submit" class="btn btn-danger w-100">Add</button>
+                    <button type="submit" class="btn text-white w-100">Add</button>
                   </div>
                 </div>
               </form>
