--- a/Login/index.html
+++ b/Login/index.html
@@ -38,11 +38,11 @@
           />
           <label for="floatingPassword">Password</label>
         </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">
+        <button class="btn text-white w-100 py-2" type="submit">
           Login
         </button>
       </form>
-      <button class="btn btn-primary w-100 mt-2" type="submit">Sign Up</button>
+      <button class="btn text-white w-100 mt-2" type="submit">Sign Up</button>
     </main>
   </body>
 </html>
