--- a/Signup/index.html
+++ b/Signup/index.html
@@ -56,11 +56,11 @@
           />
           <label for="floatingPassword">Password</label>
         </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">
+        <button class="btn text-white w-100 py-2" type="submit">
           Sign up
         </button>
       </form>
-      <button class="btn btn-primary w-100 mt-2" type="submit">Login</button>
+      <button class="btn text-white w-100 mt-2" type="submit">Login</button>
     </main>
   </body>
 </html>
