--- a/SpendSense/Dasboard/index.html
+++ b/SpendSense/Dasboard/index.html
@@ -18,7 +18,16 @@
 
   <body>
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
-      <p class="fs-4 text-center title">SpendSense</p>
+      <div class="d-flex align-items-center">
+        <img
+          class="logo me-2"
+          src="/img/SpendSense.png"
+          width="50"
+          height="50"
+        />
+        <p class="fs-4 title">SpendSense</p>
+      </div>
+
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
@@ -30,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="#" class="nav-link link-light">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#speedometer2"></use>
             </svg>
@@ -38,7 +47,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="#" class="nav-link link-light">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#speedometer2"></use>
             </svg>
@@ -46,7 +55,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link link-body-emphasis">
+          <a href="#" class="nav-link link-light">
             <svg class="bi pe-none me-2" width="16" height="16">
               <use xlink:href="#table"></use>
             </svg>
@@ -58,11 +67,11 @@
       <div class="dropdown">
         <a
           href="#"
-          class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+          class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <strong class="UserName">User</strong>
+          <strong class="UserName text-white">User</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" href="#">Settings</a></li>
