--- a/SpendSense/Budget/index.html
+++ b/SpendSense/Budget/index.html
@@ -100,7 +100,7 @@
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Budget Overview</h5>
+              <h5 class="card-title">Budget Preference</h5>
               <table class="table table-bordered">
                 <thead>
                   <tr>
