--- a/Login/index.html
+++ b/Login/index.html
@@ -15,7 +15,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
   </head>
-  <body class="d-flex align-items-center py-4 bg-body-tertiary">
+  <body class="d-flex align-items-center py-4">
     <main class="form-signin w-100 m-auto">
       <form>
         <h1 class="h3 mb-3 fw-normal text-center">Please login</h1>
