--- a/Signup/index.html
+++ b/Signup/index.html
@@ -16,7 +16,7 @@
     ></script>
   </head>
 
-  <body class="d-flex align-items-center py-4 bg-body-tertiary">
+  <body class="d-flex align-items-center py-4">
     <main class="form-signin w-100 m-auto">
       <form>
         <h1 class="h3 mb-3 fw-normal text-center">Sign up</h1>
