--- a/Login/index.html
+++ b/Login/index.html
@@ -9,6 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script defer src="./script.js"></script>
     <script
       defer
@@ -23,20 +27,27 @@
         <div class="form-floating">
           <input
             type="email"
-            class="form-control"
+            class="form-control email"
             id="floatingInput"
             placeholder="name@example.com"
           />
           <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating">
+        <div class="form-floating position-relative">
           <input
             type="password"
-            class="form-control"
+            class="form-control password"
             id="floatingPassword"
             placeholder="Password"
           />
           <label for="floatingPassword">Password</label>
+          <button
+            type="button"
+            class="password-toggle-btn"
+            onclick="togglePasswordVisibility()"
+          >
+            <i class="bi bi-eye"></i>
+          </button>
         </div>
         <button class="btn text-white w-100 py-2" type="submit">
           Login
@@ -44,5 +55,22 @@
       </form>
       <button class="btn text-white w-100 mt-2" type="submit">Sign Up</button>
     </main>
+
+    <script>
+      function togglePasswordVisibility() {
+        const passwordInput = document.getElementById("floatingPassword");
+        const passwordToggleBtn = document.querySelector(
+          ".password-toggle-btn"
+        );
+
+        if (passwordInput.type === "password") {
+          passwordInput.type = "text";
+          passwordToggleBtn.innerHTML = '<i class="bi bi-eye-slash"></i>';
+        } else {
+          passwordInput.type = "password";
+          passwordToggleBtn.innerHTML = '<i class="bi bi-eye"></i>';
+        }
+      }
+    </script>
   </body>
 </html>
