--- a/Signup/index.html
+++ b/Signup/index.html
@@ -9,6 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script defer src="./script.js"></script>
     <script
       defer
@@ -47,7 +51,7 @@
           />
           <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating">
+        <div class="form-floating position-relative">
           <input
             type="password"
             class="form-control password"
@@ -55,12 +59,34 @@
             placeholder="Password"
           />
           <label for="floatingPassword">Password</label>
+          <button
+            type="button"
+            class="password-toggle-btn"
+            onclick="togglePasswordVisibility()"
+          >
+            <i class="bi bi-eye"></i>
+          </button>
         </div>
-        <button class="btn text-white w-100 py-2" type="submit">
-          Sign up
-        </button>
+        <button class="btn text-white w-100 py-2" type="submit">Sign up</button>
       </form>
       <button class="btn text-white w-100 mt-2" type="submit">Login</button>
     </main>
+
+    <script>
+      function togglePasswordVisibility() {
+        const passwordInput = document.getElementById("floatingPassword");
+        const passwordToggleBtn = document.querySelector(
+          ".password-toggle-btn"
+        );
+
+        if (passwordInput.type === "password") {
+          passwordInput.type = "text";
+          passwordToggleBtn.innerHTML = '<i class="bi bi-eye-slash"></i>';
+        } else {
+          passwordInput.type = "password";
+          passwordToggleBtn.innerHTML = '<i class="bi bi-eye"></i>';
+        }
+      }
+    </script>
   </body>
 </html>
