--- a/Login/index.html
+++ b/Login/index.html
@@ -18,59 +18,41 @@
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body class="d-flex align-items-center py-4">
     <main class="form-signin w-100 m-auto">
       <form>
         <h1 class="h3 mb-3 fw-normal text-center">Please login</h1>
-
         <div class="form-floating">
           <input
             type="email"
-            class="form-control email"
-            id="floatingInput"
+            class="form-control"
+            id="email"
             placeholder="name@example.com"
+            required
           />
-          <label for="floatingInput">Email address</label>
+          <label for="email">Email address</label>
         </div>
         <div class="form-floating position-relative">
           <input
             type="password"
-            class="form-control password"
-            id="floatingPassword"
+            class="form-control"
+            id="password"
             placeholder="Password"
+            required
           />
-          <label for="floatingPassword">Password</label>
+          <label for="password">Password</label>
           <button
             type="button"
-            class="password-toggle-btn"
-            onclick="togglePasswordVisibility()"
+            id="passwordToggleBtn"
           >
             <i class="bi bi-eye"></i>
           </button>
         </div>
-        <button class="btn text-white w-100 py-2" type="submit">
-          Login
-        </button>
+        <button class="btn text-white w-100 py-2" id="loginBtn" type="submit">Login</button>
       </form>
-      <button class="btn text-white w-100 mt-2" type="submit">Sign Up</button>
+      <button class="btn text-white w-100 mt-2" id="signupBtn">Sign Up</button>
     </main>
-
-    <script>
-      function togglePasswordVisibility() {
-        const passwordInput = document.getElementById("floatingPassword");
-        const passwordToggleBtn = document.querySelector(
-          ".password-toggle-btn"
-        );
-
-        if (passwordInput.type === "password") {
-          passwordInput.type = "text";
-          passwordToggleBtn.innerHTML = '<i class="bi bi-eye-slash"></i>';
-        } else {
-          passwordInput.type = "password";
-          passwordToggleBtn.innerHTML = '<i class="bi bi-eye"></i>';
-        }
-      }
-    </script>
   </body>
 </html>
