--- a/Signup/index.html
+++ b/Signup/index.html
@@ -18,8 +18,8 @@
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
-
   <body class="d-flex align-items-center py-4">
     <main class="form-signin w-100 m-auto">
       <form>
@@ -27,66 +27,45 @@
         <div class="form-floating">
           <input
             type="text"
-            class="form-control firstName"
-            id="floatingInput"
+            class="form-control"
+            id="firstName"
             placeholder="John"
           />
-          <label for="floatingInput">First name</label>
+          <label for="firstName">First name</label>
         </div>
         <div class="form-floating">
           <input
             type="text"
-            class="form-control lastName"
-            id="floatingInput"
+            class="form-control"
+            id="lastName"
             placeholder="John"
           />
-          <label for="floatingInput">Last name</label>
+          <label for="lastName">Last name</label>
         </div>
         <div class="form-floating">
           <input
             type="email"
-            class="form-control email"
-            id="floatingInput"
+            class="form-control"
+            id="email"
             placeholder="name@example.com"
           />
-          <label for="floatingInput">Email address</label>
+          <label for="email">Email address</label>
         </div>
         <div class="form-floating position-relative">
           <input
             type="password"
-            class="form-control password"
-            id="floatingPassword"
+            class="form-control"
+            id="password"
             placeholder="Password"
           />
-          <label for="floatingPassword">Password</label>
-          <button
-            type="button"
-            class="password-toggle-btn"
-            onclick="togglePasswordVisibility()"
-          >
+          <label for="password">Password</label>
+          <button type="button" id="passwordToggleBtn">
             <i class="bi bi-eye"></i>
           </button>
         </div>
-        <button class="btn text-white w-100 py-2" type="submit">Sign up</button>
+        <button class="btn text-white w-100 py-2" id="signupBtn" type="submit">Sign Up</button>
       </form>
-      <button class="btn text-white w-100 mt-2" type="submit">Login</button>
+      <button class="btn text-white w-100 mt-2" id="loginBtn">Login</button>
     </main>
-
-    <script>
-      function togglePasswordVisibility() {
-        const passwordInput = document.getElementById("floatingPassword");
-        const passwordToggleBtn = document.querySelector(
-          ".password-toggle-btn"
-        );
-
-        if (passwordInput.type === "password") {
-          passwordInput.type = "text";
-          passwordToggleBtn.innerHTML = '<i class="bi bi-eye-slash"></i>';
-        } else {
-          passwordInput.type = "password";
-          passwordToggleBtn.innerHTML = '<i class="bi bi-eye"></i>';
-        }
-      }
-    </script>
   </body>
 </html>
