updating the budget sidebar

--- a/SpendSense/Budget/index.html
+++ b/SpendSense/Budget/index.html
@@ -19,7 +19,7 @@
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
       <div class="d-flex align-items-center">
         <img
-          class="logo me-2"
+          class="logo"
           src="/img/SpendSense.png"
           width="50"
           height="50"
