--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -9,6 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script defer src="./script.js"></script>
     <script
       defer
@@ -17,49 +21,44 @@
   </head>
 
   <body>
-    <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
+        <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
       <div class="d-flex align-items-center">
-        <img
-          class="logo me-2"
-          src="/img/SpendSense.png"
-          width="50"
-          height="50"
-        />
+        <img class="logo" src="/img/SpendSense.png" width="50" height="50" />
         <p class="fs-4 title">SpendSense</p>
       </div>
 
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="#" class="nav-link active" aria-current="page">
-            <svg class="bi pe-none me-2" width="16" height="16">
-              <use xlink:href="#home"></use>
-            </svg>
-            Dashboard
+          <a href="../Dashboard/index.html" class="nav-link link-light" aria-current="page">
+            <span class="icon">
+              <i class="bi bi-house-door"></i>
+            </span>
+            <span class="description">Dashboard</span>
+          </a>
+        </li>
+        <li>
+          <a href="../Budget/index.html" class="nav-link link-light">
+            <span class="icon">
+              <i class="bi bi-clipboard-check"></i>
+            </span>
+            <span class="description">Budget</span>
+          </a>
+        </li>
+        <li>
+          <a href="../Transactions/index.html" class="nav-link link-light">
+            <span class="icon">
+              <i class="bi bi-arrow-left-right"></i>
+            </span>
+            <span class="description">Transactions</span>
           </a>
         </li>
         <li>
           <a href="#" class="nav-link link-light">
-            <svg class="bi pe-none me-2" width="16" height="16">
-              <use xlink:href="#speedometer2"></use>
-            </svg>
-            Budget
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link link-light">
-            <svg class="bi pe-none me-2" width="16" height="16">
-              <use xlink:href="#speedometer2"></use>
-            </svg>
-            Transactions
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link link-light">
-            <svg class="bi pe-none me-2" width="16" height="16">
-              <use xlink:href="#table"></use>
-            </svg>
-            Learn
+            <span class="icon">
+              <i class="bi bi-clipboard-check"></i>
+            </span>
+            <span class="description">Learn</span>
           </a>
         </li>
       </ul>
@@ -67,11 +66,14 @@
       <div class="dropdown">
         <a
           href="#"
-          class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+          class="d-flex align-items-center text-white text-decoration-none"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <strong class="UserName text-white">User</strong>
+          <span class="icon">
+            <i class="bi bi-gear"></i>
+          </span>
+          <strong class="settings text-white">User</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" href="#">Settings</a></li>
