--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpendSense | Dashboard</title>
     <link href="./styles.css" rel="stylesheet" />
+    <link href="../Sidebar/styles.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +15,8 @@
       rel="stylesheet"
     />
     <script defer src="./script.js"></script>
+    <script defer src="../Sidebar/load.js"></script>
+    <script defer src="../Sidebar/script.js"></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -21,70 +24,8 @@
   </head>
 
   <body>
-        <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
-      <div class="d-flex align-items-center">
-        <img class="logo" src="/img/SpendSense.png" width="50" height="50" />
-        <p class="fs-4 title">SpendSense</p>
-      </div>
-
-      <hr />
-      <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-item">
-          <a href="../Dashboard/index.html" class="nav-link link-light" aria-current="page">
-            <span class="icon">
-              <i class="bi bi-house-door"></i>
-            </span>
-            <span class="description">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="../Budget/index.html" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
-            </span>
-            <span class="description">Budget</span>
-          </a>
-        </li>
-        <li>
-          <a href="../Transactions/index.html" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-arrow-left-right"></i>
-            </span>
-            <span class="description">Transactions</span>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
-            </span>
-            <span class="description">Learn</span>
-          </a>
-        </li>
-      </ul>
-      <hr />
-      <div class="dropdown">
-        <a
-          href="#"
-          class="d-flex align-items-center text-white text-decoration-none"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <span class="icon">
-            <i class="bi bi-gear"></i>
-          </span>
-          <strong class="settings text-white">User</strong>
-        </a>
-        <ul class="dropdown-menu text-small shadow">
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li>
-            <hr class="dropdown-divider" />
-          </li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
-        </ul>
-      </div>
-    </div>
+    <!-- Sidebar -->
+    <div id="sidebar"></div>
 
     <div class="content p-4">
       <h1 class="text-center">Welcome, User Name</h1>
