--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpendSense | Transactions</title>
     <link href="./styles.css" rel="stylesheet" />
+    <link href="../Sidebar/styles.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,76 +15,16 @@
       rel="stylesheet"
     />
     <script defer src="./script.js"></script>
+    <script defer src="../Sidebar/load.js"></script>
+    <script defer src="../Sidebar/script.js"></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
   </head>
   <body>
-        <div class="sidebar d-flex flex-column flex-shrink-0 p-3">
-      <div class="d-flex align-items-center">
-        <img class="logo" src="/img/SpendSense.png" width="50" height="50" />
-        <p class="fs-4 title">SpendSense</p>
-      </div>
-
-      <hr />
-      <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-item">
-          <a href="../Dashboard/index.html" class="nav-link link-light" aria-current="page">
-            <span class="icon">
-              <i class="bi bi-house-door"></i>
-            </span>
-            <span class="description">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="../Budget/index.html" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
-            </span>
-            <span class="description">Budget</span>
-          </a>
-        </li>
-        <li>
-          <a href="../Transactions/index.html" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-arrow-left-right"></i>
-            </span>
-            <span class="description">Transactions</span>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link link-light">
-            <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
-            </span>
-            <span class="description">Learn</span>
-          </a>
-        </li>
-      </ul>
-      <hr />
-      <div class="dropdown">
-        <a
-          href="#"
-          class="d-flex align-items-center text-white text-decoration-none"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <span class="icon">
-            <i class="bi bi-gear"></i>
-          </span>
-          <strong class="settings text-white">User</strong>
-        </a>
-        <ul class="dropdown-menu text-small shadow">
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li>
-            <hr class="dropdown-divider" />
-          </li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
-        </ul>
-      </div>
-    </div>
+    <!-- Sidebar -->
+    <div id="sidebar"></div>
 
     <div class="content">
       <h2 class="text-center mb-4">Transactions</h2>
@@ -278,7 +219,6 @@
           </div>
         </div>
 
-        
         <!-- Recurring Finances Section -->
         <div class="col-12">
           <div class="card">
@@ -290,14 +230,26 @@
               <form id="recurring-income-form" class="mb-3">
                 <div class="row g-3">
                   <div class="col-md-4">
-                    <input type="text" class="form-control" placeholder="Source" required />
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Source"
+                      required
+                    />
                   </div>
                   <div class="col-md-3">
-                    <input type="number" class="form-control" placeholder="Amount" required />
+                    <input
+                      type="number"
+                      class="form-control"
+                      placeholder="Amount"
+                      required
+                    />
                   </div>
                   <div class="col-md-3">
                     <select class="form-select" required>
-                      <option value="" disabled selected>Select Frequency</option>
+                      <option value="" disabled selected>
+                        Select Frequency
+                      </option>
                       <option value="Daily">Daily</option>
                       <option value="Weekly">Weekly</option>
                       <option value="Bi-Weekly">Bi-Weekly</option>
@@ -307,7 +259,9 @@
                     </select>
                   </div>
                   <div class="col-md-2">
-                    <button type="submit" class="btn text-white w-100">Add</button>
+                    <button type="submit" class="btn text-white w-100">
+                      Add
+                    </button>
                   </div>
                 </div>
               </form>
@@ -317,14 +271,26 @@
               <form id="recurring-expenses-form">
                 <div class="row g-3">
                   <div class="col-md-4">
-                    <input type="text" class="form-control" placeholder="Expense Name" required />
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Expense Name"
+                      required
+                    />
                   </div>
                   <div class="col-md-3">
-                    <input type="number" class="form-control" placeholder="Amount" required />
+                    <input
+                      type="number"
+                      class="form-control"
+                      placeholder="Amount"
+                      required
+                    />
                   </div>
                   <div class="col-md-3">
                     <select class="form-select" required>
-                      <option value="" disabled selected>Select Frequency</option>
+                      <option value="" disabled selected>
+                        Select Frequency
+                      </option>
                       <option value="Daily">Daily</option>
                       <option value="Weekly">Weekly</option>
                       <option value="Bi-Weekly">Bi-Weekly</option>
@@ -334,7 +300,9 @@
                     </select>
                   </div>
                   <div class="col-md-2">
-                    <button type="submit" class="btn text-white w-100">Add</button>
+                    <button type="submit" class="btn text-white w-100">
+                      Add
+                    </button>
                   </div>
                 </div>
               </form>
@@ -355,7 +323,6 @@
             </div>
           </div>
         </div>
-      </div>
       </div>
     </div>
   </body>
