--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -14,9 +14,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <script defer src="script.js"></script>
-    <script defer src="Sidebar/load.js"></script>
-    <script defer src="Sidebar/script.js"></script>
+    <script defer src="/script.js"></script>
+    <script defer src="/Sidebar/load.js"></script>
+    <script defer src="/Sidebar/script.js"></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
