--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <script defer src="/script.js"></script>
-    <script defer src="/Sidebar/load.js"></script>
-    <script defer src="/Sidebar/script.js"></script>
+    <script defer src="/SpendSense/Sidebar/load.js"></script>
+    <script defer src="/SpendSense/Sidebar/script.js"></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
