updated active links

--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3" id="sidebar">
       <div class="d-flex align-items-center">
-        <img class="logo" src="img/SpendSense.png" width="50" height="50" />
+        <img class="logo" src=".../img/SpendSense.png" width="50" height="50" />
         <p class="fs-4 title">SpendSense</p>
       </div>
 
