getting the logo to appear

--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -9,14 +9,24 @@
   <body>
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3" id="sidebar">
       <div class="d-flex align-items-center">
-        <img class="logo" src=".../img/SpendSense.png" width="50" height="50" />
+        <img
+          class="logo"
+          src="../../img/SpendSense.png"
+          width="50"
+          height="50"
+        />
         <p class="fs-4 title">SpendSense</p>
       </div>
 
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="../Dashboard/index.html" id="dashboard" class="nav-link link-light" aria-current="page">
+          <a
+            href="../Dashboard/index.html"
+            id="dashboard"
+            class="nav-link link-light"
+            aria-current="page"
+          >
             <span class="icon">
               <i class="bi bi-house-door"></i>
             </span>
@@ -24,7 +34,11 @@
           </a>
         </li>
         <li>
-          <a href="../Budget/index.html" id="budget" class="nav-link link-light">
+          <a
+            href="../Budget/index.html"
+            id="budget"
+            class="nav-link link-light"
+          >
             <span class="icon">
               <i class="bi bi-clipboard-check"></i>
             </span>
@@ -32,7 +46,11 @@
           </a>
         </li>
         <li>
-          <a href="../Transactions/index.html" id="transactions" class="nav-link link-light">
+          <a
+            href="../Transactions/index.html"
+            id="transactions"
+            class="nav-link link-light"
+          >
             <span class="icon">
               <i class="bi bi-arrow-left-right"></i>
             </span>
@@ -71,6 +89,5 @@
         </ul>
       </div>
     </div>
-    
   </body>
 </html>
