--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -40,7 +40,7 @@
             class="nav-link link-light"
           >
             <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
+              <i class="bi bi-bar-chart"></i>
             </span>
             <span class="description">Budget</span>
           </a>
@@ -57,14 +57,14 @@
             <span class="description">Transactions</span>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#" class="nav-link link-light">
             <span class="icon">
-              <i class="bi bi-clipboard-check"></i>
+              <i class="bi bi-Learn"></i>
             </span>
             <span class="description">Learn</span>
           </a>
-        </li>
+        </li> -->
       </ul>
       <hr />
       <div class="dropdown">
